# local_embedding

./: .env.example  README.md  local_embedding.py  local_embedding.service.example  pyproject.toml
